<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PViewer</string>
    <string name="action_settings">About</string>
    <string name="up">UP:</string>
    <string name="score">Score:</string>
    <string name="next">下一页</string>
    <string name="front">上一页</string>
    <string name="index">回首页</string>
    <string name="search">搜索Tags</string>
    <string name="tagshow">Tags:</string>
    <string name="yes">搜索</string>
    <string name="no">取消</string>
    <string name="home">最新</string>
    <string name="title_activity_data">图片详情</string>
    <string name="id">ID:</string>
    <string name="size">原图大小:</string>
    <string name="download">下载高清原图</string>
    <string name="foot">点击加载下一页</string>
    <string name="head">点击回到上一页</string>
    <string name="rate">Rating:</string>

    <color name="id">#5cacee</color>
    <color name="score">#b2dfee</color>
    <color name="rate">#cd2626</color>

    <string name="sampleSize">sample dimension:</string>
    <string name="sample">sample size:</string>
    <string name="jpegSize">jpeg dimension:</string>
    <string name="jpeg">jpeg size:</string>
    <string name="fileSize">source dimension:</string>
    <string name="file">source size:</string>
    <string name="get">Download</string>
    <string name="title_activity_about">About PViewer</string>
    <string name="hello_world">Hello world!</string>
    <string name="piccus">Author: piccus@outlook.com</string>
    <string name="version">Version:1.0</string>
    <string name="github">源码交流: github/piccus/pvviewer</string>
    <string name="note">默认下载位置:sdcard/download</string>
    <string name="note2">图片缓存位置:sdcard/PViewer/cache</string>
    <string name="note3">本app为个人兴趣作，暂时只支持4.0.3以上系统，吐槽UI的都没女朋友</string>

</resources>
