<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".About" >

    <TextView
        android:id="@+id/piccus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/piccus"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/github"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/github"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/note2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note2"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/note3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note3"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>
