<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp" />

    <Button
        android:id="@+id/index"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/index" />

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/index"
        android:layout_alignBottom="@+id/index"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16dp"
        android:text="@string/next" />

    <Button
        android:id="@+id/front"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/index"
        android:layout_alignBottom="@+id/index"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="16dp"
        android:text="@string/front" />

</RelativeLayout>
