<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/tagsShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/tagshow"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/tagsSource"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/tagsShow"
        android:ems="10" />

    <Button
        android:id="@+id/yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/no"
        android:layout_alignBottom="@+id/no"
        android:layout_alignLeft="@+id/tagsSource"
        android:layout_marginLeft="16dp"
        android:text="@string/yes" />

    <Button
        android:id="@+id/no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/tagsSource"
        android:layout_below="@+id/tagsSource"
        android:layout_marginRight="34dp"
        android:layout_marginTop="22dp"
        android:text="@string/no" />

</RelativeLayout>
